cmake_minimum_required (VERSION 3.13)

configure_file ("version.inc" "leviathan-racket.hpp" @ONLY)

if (NAOMI_BUILD)
	target_compile_definitions (naomi PRIVATE "-DLEVIATHAN_DEFINES_VERSION")
	target_include_directories (naomi PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
	if (VCPKG_TOOLCHAIN)
		target_compile_definitions (naomi PRIVATE "-DLEVIATHAN_USES_VCPKG")
	endif ()
	if (META_BUILD)
		target_compile_definitions (naomi PRIVATE "-DLEVIATHAN_USES_META")
	endif ()
	if (STDAFX_BUILD)
		target_precompile_headers (naomi PRIVATE "stdafx.hpp")
	endif ()
endif ()

if (EDITOR_BUILD)
	target_compile_definitions (editor PRIVATE "-DLEVIATHAN_DEFINES_VERSION")
	target_include_directories (editor PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
	if (STDAFX_BUILD)
		target_precompile_headers (editor PRIVATE "stdafx.hpp")
	endif ()
endif ()

add_subdirectory("actor")
add_subdirectory("audio")
add_subdirectory("component")
add_subdirectory("field")
add_subdirectory("menu")
add_subdirectory("overlay")
add_subdirectory("resource")
add_subdirectory("system")
add_subdirectory("utility")
add_subdirectory("video")
