cmake_minimum_required (VERSION 3.13)

configure_file ("version.inc" "leviathan-racket.hpp" @ONLY)

target_compile_definitions (lvrk PRIVATE "-DLEVIATHAN_DEFINES_VERSION")
target_include_directories (lvrk PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
if (VCPKG_TOOLCHAIN)
	target_compile_definitions (lvrk PRIVATE "-DLEVIATHAN_USES_VCPKG")
endif ()
if (META_BUILD)
	target_compile_definitions (lvrk PRIVATE "-DLEVIATHAN_USES_META")
endif ()
if (STDAFX_BUILD)
	target_precompile_headers (lvrk PRIVATE "stdafx.hpp")
endif ()

add_subdirectory("actor")
add_subdirectory("audio")
add_subdirectory("component")
add_subdirectory("editor")
add_subdirectory("field")
add_subdirectory("menu")
add_subdirectory("overlay")
add_subdirectory("resource")
add_subdirectory("system")
add_subdirectory("utility")
add_subdirectory("video")
